data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_722.wast
;; 3. **Test Description**: A loop that uses `br_if` with multiple conditions combined using logical AND and OR operations to decide whether to break.    - **Constraint**: Ensures combined logical conditions in `br_if` are correctly evaluated to decide the branch direction.    - **Differential Behavior**: The loop either exits too early or continues despite the complex combined condition being true to break.

(assert_invalid
  (module
    (func (result i32)
      (local i32)
      (loop (result i32)
        (i32.const 1)
        (local.set 0)
        (block
          (br_if 0 (i32.and (local.get 0) (i32.const 1)))
          (br_if 1 (i32.or (i32.const 0) (i32.const 0)))
        )
      )
    )
  )
  "type mismatch"
)